Bug 76009 - r600_streamout.c:108:6: error: conflicting types for 'r600_set_streamout_targets'
Summary: r600_streamout.c:108:6: error: conflicting types for 'r600_set_streamout_targ...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium blocker
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-03-11 04:24 UTC by Vinson Lee
Modified: 2014-03-11 05:56 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2014-03-11 04:24:33 UTC
mesa: dfa25ea5cd19d5a050a1c94bd7370a2259b9f007 (master 10.2.0-devel)

  CC       r600_streamout.lo
r600_streamout.c:108:6: error: conflicting types for 'r600_set_streamout_targets'
 void r600_set_streamout_targets(struct pipe_context *ctx,
      ^
In file included from r600_streamout.c:27:0:
r600_pipe_common.h:413:6: note: previous declaration of 'r600_set_streamout_targets' was here
 void r600_set_streamout_targets(struct pipe_context *ctx,
      ^

dfa25ea5cd19d5a050a1c94bd7370a2259b9f007 is the first bad commit
commit dfa25ea5cd19d5a050a1c94bd7370a2259b9f007
Author: Zack Rusin <zackr@vmware.com>
Date:   Thu Mar 6 18:43:44 2014 -0500

    gallium: allow setting of the internal stream output offset
    
    D3D10 allows setting of the internal offset of a buffer, which is
    in general only incremented via actual stream output writes. By
    allowing setting of the internal offset draw_auto is capable
    of rendering from buffers which have not been actually streamed
    out to. Our interface didn't allow. This change functionally
    shouldn't make any difference to OpenGL where instead of an
    append_bitmask you just get a real array where -1 means append
    (like in D3D) and 0 means do not append.
    
    Signed-off-by: Zack Rusin <zackr@vmware.com>
    Reviewed-by: Roland Scheidegger <sroland@vmware.com>
    Reviewed-by: Jose Fonseca <jfonseca@vmware.com>
    Reviewed-by: Marek Olšák <marek.olsak@amd.com>

:040000 040000 899aff75fb864562d50d09d1b72b728adfa3c9be c1582db45fac19679419c7bcf4152269b630df36 M	src
Comment 1 Vinson Lee 2014-03-11 05:56:53 UTC
commit e6c565fcc591f4856eff512f72e961ff0686475c
Author: Vinson Lee <vlee@freedesktop.org>
Date:   Mon Mar 10 22:49:51 2014 -0700

    radeon: Fix build.
    
    Fix build error introduced with commit
    dfa25ea5cd19d5a050a1c94bd7370a2259b9f007.
    
      CC       r600_streamout.lo
    r600_streamout.c:108:6: error: conflicting types for 'r600_set_streamout_targets'
    void r600_set_streamout_targets(struct pipe_context *ctx,
         ^
    ./r600_pipe_common.h:413:6: note: previous declaration is here
    void r600_set_streamout_targets(struct pipe_context *ctx,
         ^
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=76009
    Signed-off-by: Vinson Lee <vlee@freedesktop.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.